<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Menu item text [CHAR LIMIT=NONE] -->
    <string name="accounts">Accounts</string>

    <!-- Dialog button [CHAR LIMIT=NONE] -->
    <string name="add_account">Add account&#8230;</string>

    <!--  Name of the application in the launcher [CHAR LIMIT=NONE] -->
    <string name="app_name">NCWITMOBILEAPP</string>

    <!-- Dialog title text [CHAR LIMIT=NONE] -->
    <string name="attention">Attention</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="connect">Connect</string>

    <!-- Message text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_text">This application requests permission to connect your mobile device to the cloud.</string>

    <!-- Header text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_to_the_cloud">Connect To The Cloud</string>

    <!-- Header text for "Connected" screen [CHAR LIMIT=NONE] -->
    <string name="connected_to_the_cloud">Connected To The Cloud</string>

    <!-- Message text [CHAR LIMIT=NONE] -->
    <string name="contacting_server">Contacting server&#8230;</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="disconnect">Disconnect</string>

    <!-- Informational text for "Connected" screen with placeholder for account name [CHAR LIMIT=NONE] -->
    <string name="disconnect_text">This device is currently connected to the cloud as %1$s.</string>

    <!-- Footer text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="do_you_want_to_connect">Do you want to connect?</string>

    <!-- Footer text for "Disconnect" screen [CHAR LIMIT=NONE] -->
    <string name="do_you_want_to_disconnect">Do you want to disconnect?</string>

    <!-- Initial "hello, world" informational message [CHAR LIMIT=NONE] -->
    <string name="hello_world_info_text">Press the \"Say Hello\" button to receive a message from the App Engine server.</string>

    <!-- Initial "hello, world" response message [CHAR LIMIT=NONE] -->
    <string name="hello_world_text"></string>

    <!-- Dialog message text [CHAR LIMIT=NONE] -->
    <string name="needs_account">To receive notifications from this app, you must first create an account.</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="registration_error">Failed to register/unregister %1$s.</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="registration_succeeded">Registered %1$s for C2DM messaging.</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="say_hello">Say Hello</string>

    <!-- List view header text [CHAR LIMIT=NONE] -->
    <string name="select_account">Select the account you wish to authorize:</string>

    <!-- Dialog button text [CHAR LIMIT=NONE] -->
    <string name="skip">Skip</string>
    
    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="regional_affiliate">NCWIT Regional Affiliate Award</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="unregistration_succeeded">Unegistered %1$s for C2DM messaging.</string>
    <string name="Registration">Registration</string>
    <string name="EmailAddress"> Email Address</string>
    <string name="Password"> Password</string>
    <string name="PasswordConfirm"> Confirm Password</string>
    <string name="NCWITWinner">NCWIT Award Winner? Skip to &quot;Birthday.&quot; Otherwise, enter your referral code now.</string>
    <string name="ReferralCode"> Referral Code</string>
    <string name="Birthday">Birthday</string>
    <string name="SelectBDay">Select Birthday</string>
    <string name="SecurityAnswer">Security Answer</string>
    <string-array name="SecurityQuestion">
    </string-array>
    <string name="TOS">I have read and accept the Terms of Service</string>
    <string name="RegisterButton">REGISTER</string>
    <string name="FirstName"> First Name</string>
    <string name="LastName"> Last Name</string>
    <string name="Logo">Logo</string>
    <string name="ForgotPassword">Forgot Your Password?</string>
    <string name="Register">New Member? Register Here!</string>
    <string name="Copyright1">Â©National Center for Women &amp; Information Technology</string>
    <string name="Login">Login</string>
    <string name="Example">Hello</string>
    <string name="failedMessage">Oops! That does not match our records! </string>
    <string name="backtologin">Go Back</string>
    <string name="Pleasetryagain">Please try again</string>
    <string name="LockoutValues">Sorry, you have reached the maximum number of failed login attempts, your account is now locked for security purposes. Please try again in </string>
    <string name="SecurityQuestion">Enter a security question</string>

    <!-- Strings for State Spinner -->
    <string name = "state_prompt">Your state:</string>
    <string-array name="states_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <!-- End Strings for State Spinner -->
    
    <string name="slogan">By Girls. For Girls.</string>
    <string name="techicks">Techicks</string>
    <string name="referFriend">Refer a Friend!</string> 
  <string name="addYear">Add Year</string> 
  <string name="firstName">First Name</string> 
  <string name="lastName">Last Name</string> 
  <string name="Cancel">Cancel</string> 
  <string name="Save">Save</string> 
  <string name="Share">Share</string> 
  <string name="Generate">Generate!</string> 
  <string name="ReferralExplanation">Referral codes are only active for 14 days. Your friend must download this app and enter the referral code at the time of registration in order to activate their account. Clicking below signifies that you understand:</string> 
  <string name="GenerateReferralMessage">Generate a referral code here:</string> 
  <string name="Year">Year</string> 
  <string name="NCWITRegAffAward">NCWIT Regional Affiliate Award</string> 
  <string name="RunnerUp">Runner-Up</string> 
  <string name="NCWITNatAward">NCWIT National Award</string> 
  <string name="Winner">Winner</string> 
  <string name="Awards">Awards</string> 
  <string name="editProfile">Edit Profile</string> 
  <string name="bday">Birthday-</string> 
  <string name="month">Month:</string> 
  <string name="day">Day:</string> 
  <string name="year">Year:</string> 
  <string name="showBday">Show Birthday</string> 
  <string name="showMonth">Show only Month and Day</string> 
  <string name="dontShowBday">Don\'t show Birthday</string> 
  <string name="student">Student</string> 
  <string name="educator">Educator</string> 
  <string name="professional">Professional</string> 
  <string name="location">Location</string> 
  <string name="showLocation">Show Location?</string> 
  <string name="interests">Interests</string> 
  <string name="workplaces">Workplaces</string> 
  <string name="name">Name</string> 
  <string name="description1">Description(Location, Job Discription, etc.)</string> 
  <string name="timeThere">Time There:</string> 
  <string name="years">Years</string> 
  <string name="months">Months</string> 
  <string name="working">Currently Working Here?</string> 
  <string name="workplace">Add a new Workplace</string> 
  <string name="schools">Schools</string> 
  <string name="description2">Description(Location, Major, Activities, etc.)</string> 
  <string name="attending">Currently Attenting?</string> 
  <string name="school">Add a new School</string> 
    
</resources>
